# OpenGLTest

./: CMakeLists.txt  imgui.ini
app/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  IndexBuffer.hpp  Renderer.hpp  Shader.hpp  Textures.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
include/stb/: stb_image.h
include/tests/: Test.hpp  Test2DObject.hpp  TestClearColor.hpp
res/shader/: 2dObj.shader  basic1.shader  texture.shader  uniform.shader
src/: CMakeLists.txt  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Test.cpp  Test2DObject.cpp  TestClearColor.cpp  Textures.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
